--- a/firebase.json
+++ b/firebase.json
@@ -1,17 +1,10 @@
 {
   "hosting": {
-    "public": "Build",
-     "site": "ema-john-simple-site-by-masud",
+    "public": "build",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
     ]
   }
 }
